# dagster-project

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  quick_start.bat  quick_start.sh  requirements.txt  run_dagster.bat  run_dagster.sh  setup.cfg  setup.py
.tmp_dagster_home_56i71fx2/history/: runs.db
.tmp_dagster_home_56i71fx2/schedules/: schedules.db
.tmp_dagster_home_981p1_2a/history/: runs.db
.tmp_dagster_home_981p1_2a/schedules/: schedules.db
.tmp_dagster_home_981p1_2a/storage/: dev_material_movement_sample
config/: app_config.yaml  dagster.yaml  workspace.yaml
my_dagster_project/: definitions.py
my_dagster_project/assets/: __init__.py  asset_template.py  test_asset.py
my_dagster_project/config/: app_config.yaml  database.yaml  logging.yaml
my_dagster_project/core/: __init__.py  asset_discovery.py  asset_record.py  config_manager.py  db_config.py  health_monitor.py  job_scheduler.py  logging_config.py  metadata_manager.py  metadata_store.py  monitoring.py
my_dagster_project/governance/: __init__.py  dashboard.py
my_dagster_project/jobs/: __init__.py  automated_jobs.py  data_ingestion_job.py
my_dagster_project/schedules/: __init__.py  data_ingestion_schedule.py
my_dagster_project/scripts/: asset_manager.py  check_health.py  discover_assets.py  initialize.py  initialize_metadata.py  register_test_asset.py  simulate_execution.py  view_logs.py
my_dagster_project/sensors/: asset_discovery_sensor.py
scripts/: init_db.py  validate_setup.py
(+16 files in other folders)
