[tool.dagster]
module_name = "my_dagster_project.definitions"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_dagster_project"
version = "0.1.0"
description = "Dagster project for data pipeline"
requires-python = ">=3.8"

dependencies = [
    "dagster",
    "dagster-webserver",
    "pandas",
    "pyodbc",
    "pyyaml",
]